# apprtc

./: .gitignore  Cargo.toml  README.md  cert.pem  go.mod  index.html  key.pem
collider/: collider.go  collider_test.go  room.go  roomTable.go
collidermain/: main.go
src/collider/: index.html
src/collider/collider/: collider.go  dashboard_test.go  room_test.go
src/collider/collidermain/: main.go
