[package]
name = "apprtc"
version = "0.0.1"
edition = "2024"
authors = ["Rain Liu <y@liu.mx>"]
license = "MIT/Apache-2.0"
homepage = "https://appr.tc"
documentation = "https://docs.rs/apprtc"
repository = "https://github.com/appr-tc/apprtc"
keywords = ["networking", "protocols"]
categories = ["network-programming"]
description = "AppRTC Signaling"

[dependencies]
